--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <version>0.19</version>
     </dependency>
     <dependency>
+      <groupId>org.uncommons.maths</groupId>
+      <artifactId>uncommons-maths</artifactId>
+      <version>1.2.1</version>
+      <!-- note: this is an older version, but without broken dep
+      on jfreechart-1.0.8 -->
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
