--- a/MODEL_EXAMPLE/pom.xml
+++ b/MODEL_EXAMPLE/pom.xml
@@ -21,5 +21,10 @@
       <artifactId>MODEL_MOCK</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>edu.berkeley.path</groupId>
+      <artifactId>ModelElements</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
