--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,14 @@
           </args>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
+        <configuration>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -124,6 +132,14 @@
         <version>2.9.1</version>
         <configuration>
           <configLocation>checkstyle.xml</configLocation>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8.1</version>
+        <configuration>
         </configuration>
       </plugin>
     </plugins>
