--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.class
 *.log
 
+.cache
+
 # sbt specific
 dist/*
 target/
@@ -11,3 +13,11 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+
+# eclipse conf file
+.settings
+.classpath
+.project
+.manager
+.scala_dependencies
+
