--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
       <artifactId>scalatest_2.9.1</artifactId>
       <version>1.8</version>
     </dependency>
+    <dependency>
+      <groupId>net.java.maven-incremental-build</groupId>
+	    <artifactId>incremental-build-plugin</artifactId>
+	    <version>1.6</version>
+    </dependency>
 
 <!--
   why is this busted? See Context.scala
@@ -83,6 +88,18 @@
     </pluginManagement>
 
     <plugins>
+      <plugin>
+        <groupId>net.java.maven-incremental-build</groupId>
+	      <artifactId>incremental-build-plugin</artifactId>
+  	    <version>1.6</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>incremental-build</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
